kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bdev-ops
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: bdev-ops
